bk_ida/gccida/g1/cse_process_notes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_process_notes/src/cse.c:6955:22: error: expected identifier or '('
 struct cse_reg_info = cached_cse_reg_info; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_process_notes/src/cse.c:6962:22: error: expected identifier or '('
 struct cse_reg_info = cached_cse_reg_info; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_process_notes/src/cse.c:6967:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( rtuint); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_process_notes/src/cse.c:6979:39: error: use of undeclared identifier 'machine_mode'
&& ( v19 = gen_lowpart_if_possible( ( machine_mode)*( ( unsigned __int8 *)v2 + 2), const_rtx)) != 0LL ) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_process_notes/src/cse.c:7031:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = (  struct rtx_def *)x[1]; 
                          ^~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_process_notes/src/obj/cse.o] Error 1
